--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     ],
     "scripts": {
         "start": "node .",
-        "start:sqcr-demo":
-            "sqcr public/sqcr-demo/buffers --config public/sqcr-demo/sqcr.json --path ."
+        "start:sqcr-demo:matrix":
+            "sqcr public/sqcr-demo/buffers --config public/sqcr-demo/sqcr-matrix.json --path ."
     },
     "dependencies": {
         "express": "4.16.3",
@@ -31,6 +31,7 @@
         "sqcr": "file:../sqcr",
         "tonal": "^1.1.3",
         "tone": "^0.12.80",
+        "vis": "^4.21.0",
         "webmidi": "^2.2.0",
         "ws": "5.1.1"
     }
