--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     },
     "dependencies": {
         "express": "4.16.3",
-        "meow": "^5.0.0",
+        "meow": "5.0.0",
         "osc": "2.2.1",
-        "sqcr": "file:../sqcr",
-        "tonal": "^1.1.3",
-        "tone": "^0.12.80",
-        "vis": "^4.21.0",
-        "webmidi": "^2.2.0",
+        "sqcr": "1.1.0",
+        "tonal": "1.1.3",
+        "tone": "0.12.80",
+        "vis": "4.21.0",
+        "webmidi": "2.2.0",
         "ws": "5.1.1"
     }
 }
