--- a/package.json
+++ b/package.json
@@ -1,25 +1,9 @@
 {
-    "name": "osc.js-examples-web",
+    "name": "osc-browser-experiments",
     "main": "index.js",
     "version": "0.1.1",
     "description": "Example of how to use osc.js in a web browser.",
-    "author": "Colin Clark",
-    "homepage": "http://flockingjs.org/",
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/colinbdclark/osc.js-examples.git"
-    },
-    "readmeFilename": "README.md",
-    "bugs": "https://github.com/colinbdclark/osc.js/issues",
-    "license": "(MIT OR GPL-2.0)",
-    "keywords": [
-        "Open Sound Control",
-        "OSC",
-        "sound",
-        "audio",
-        "music",
-        "Flocking"
-    ],
+    "author": "Omar Delarosa",
     "scripts": {
         "start": "npm run start:sqcr-demo:slider",
         "start:sqcr-demo:matrix": "sqcr public/sqcr-demo/buffers --config public/sqcr-demo/config/matrix.json --path .",
@@ -34,8 +18,5 @@
         "vis": "4.21.0",
         "webmidi": "2.2.0",
         "ws": "5.1.1"
-    },
-    "devDependencies": {
-        "osc": "^2.2.3"
     }
 }
